--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       <section id="stay">
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
+        <form class="" action="index.html" method="post">
+          <label for="">Location</label>
+          <label for="">Arrive</label>
+          <label for="">Depart</label>
+          <label for="">Type</label>
+        </form>
       </section>
 
       <!-- About -->
