--- a/index.html
+++ b/index.html
@@ -35,11 +35,26 @@
       <section id="stay">
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
-        <form class="" action="index.html" method="post">
-          <label for="">Location</label>
-          <label for="">Arrive</label>
-          <label for="">Depart</label>
-          <label for="">Type</label>
+        <form action="index.html" method="post">
+          <div>
+            <label for="">Location</label>
+            <input
+              id="name"
+              type="text"
+              name="name"
+              placeholder="Search destination"
+            />
+           </textarea>
+          </div>
+          <div>
+            <label for="">Arrive</label>
+          </div>
+          <div>
+            <label for="">Depart</label>
+          </div>
+          <div>
+            <label for="">Type</label>
+          </div>
         </form>
       </section>
 
