--- a/index.html
+++ b/index.html
@@ -48,12 +48,30 @@
           </div>
           <div>
             <label for="">Arrive</label>
+            <input type="date" id="start" name="trip-start"
+       value="2018-07-22"
+       min="2018-01-01" max="2018-12-31">
           </div>
           <div>
             <label for="">Depart</label>
+            <input type="date" id="start" name="trip-start"
+       value="2018-07-22"
+       min="2018-01-01" max="2018-12-31">
           </div>
           <div>
             <label for="">Type</label>
+            <select id="cars" name="cars">
+            <option value="Apartment">Apartment</option>
+            <option value="Barn">Barn</option>
+            <option value="Castle">Castle</option>
+            <option value="Houseboat">Houseboat</option>
+            <option value="Tiny House">Tiny House</option>
+            <option value="Yacht">Yacht</option>
+            <option value="Yurt">Yurt</option>
+            </select>
+          </div>
+          <div>
+            <button type="button" name="button">Submit</button>
           </div>
         </form>
       </section>
