separated header in ideas section from the rest of section via div tag

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <!-- About -->
       <section id="about" class="alternate-background">
         <h2>About</h2>
-        <div class="">
+        <div>
           <img
             src="images/vacation-rental-pool.png"
             alt="Thinkfulbnb - Vacation rental pool"
@@ -103,19 +103,21 @@
       <!-- Ideas -->
       <section id="ideas">
         <h2>Ideas</h2>
-        <h3>Forest retreats</h3>
-        <img
-          src="images/forest-retreat.png"
-          alt="Thinkfulbnb - Forest retreat"
-        />
-        <h3>Beaches</h3>
-        <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+        <div>
+          <h3>Forest retreats</h3>
+          <img
+            src="images/forest-retreat.png"
+            alt="Thinkfulbnb - Forest retreat"
+          />
+          <h3>Beaches</h3>
+          <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
 
-        <h3>Rustic cabins</h3>
-        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+          <h3>Rustic cabins</h3>
+          <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
 
-        <h3>Pet-friendly</h3>
-        <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+          <h3>Pet-friendly</h3>
+          <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+        </div>
       </section>
 
       <!-- Host -->
