--- a/index.html
+++ b/index.html
@@ -103,20 +103,22 @@
       <!-- Ideas -->
       <section id="ideas">
         <h2>Ideas</h2>
-        <div>
-          <h3>Forest retreats</h3>
-          <img
-            src="images/forest-retreat.png"
-            alt="Thinkfulbnb - Forest retreat"
-          />
-          <h3>Beaches</h3>
-          <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
-
-          <h3>Rustic cabins</h3>
-          <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
-
-          <h3>Pet-friendly</h3>
-          <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+        <div class="container">
+            <div class="column">
+              <h3>Forest retreats</h3>
+              <img
+                src="images/forest-retreat.png"
+                alt="Thinkfulbnb - Forest retreat"
+              />
+              <h3>Rustic cabins</h3>
+              <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+            </div>
+            <div class="double-column">
+              <h3>Beaches</h3>
+              <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+              <h3>Pet-friendly</h3>
+              <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+            </div>
         </div>
       </section>
 
