--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -37,29 +37,28 @@
         <!-- Create a form here -->
         <form action="index.html" method="post">
           <div>
-            <label for="">Location</label>
+            <label for="Location">Location</label>
             <input
               id="name"
               type="text"
               name="name"
               placeholder="Search destination"
             />
-           </textarea>
           </div>
           <div>
-            <label for="">Arrive</label>
+            <label for="Arrive">Arrive</label>
             <input type="date" id="start" name="trip-start"
        value="2018-07-22"
        min="2018-01-01" max="2018-12-31">
           </div>
           <div>
-            <label for="">Depart</label>
+            <label for="Depart">Depart</label>
             <input type="date" id="start" name="trip-start"
        value="2018-07-22"
        min="2018-01-01" max="2018-12-31">
           </div>
           <div>
-            <label for="">Type</label>
+            <label for="Type">Type</label>
             <select id="cars" name="cars">
             <option value="Apartment">Apartment</option>
             <option value="Barn">Barn</option>
