removed the for attributes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Create a form here -->
         <form action="index.html" method="post">
           <div>
-            <label for="stay">Location</label>
+            <label>Location</label>
             <input
               id="name"
               type="text"
@@ -46,19 +46,19 @@
             />
           </div>
           <div>
-            <label for="stay">Arrive</label>
+            <label>Arrive</label>
             <input type="date" name="trip-start"
        value="2018-07-22"
        min="2018-01-01" max="2018-12-31">
           </div>
           <div>
-            <label for="stay">Depart</label>
+            <label>Depart</label>
             <input type="date" name="trip-start"
        value="2018-07-22"
        min="2018-01-01" max="2018-12-31">
           </div>
           <div>
-            <label for="stay">Type</label>
+            <label>Type</label>
             <select id="cars" name="cars">
             <option value="Apartment">Apartment</option>
             <option value="Barn">Barn</option>
